# esrp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: config.toml
.claude/: settings.local.json  settings.local.json.bak
.dev/: config.toml
.github/workflows/: ci.yml
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_esrp_py.py
crates/esrp-canonical/: Cargo.toml
crates/esrp-canonical/src/: canonical.rs  error.rs  hash.rs  lib.rs  payload.rs
crates/esrp-canonical/tests/: canonical_test.rs  hash_test.rs
crates/esrp-core/: Cargo.toml
crates/esrp-core/src/: error.rs  lib.rs  types.rs  validation.rs  version.rs
crates/esrp-core/tests/: conformance_test.rs  types_test.rs  validation_test.rs
crates/esrp-http/: Cargo.toml
crates/esrp-http/src/: client.rs  error.rs  extractors.rs  lib.rs  response.rs
crates/esrp-http/tests/: integration_test.rs
crates/esrp-workspace/: Cargo.toml
crates/esrp-workspace/src/: error.rs  filesystem.rs  lib.rs  provider.rs  uri.rs
crates/isnad/: Cargo.toml
crates/isnad/src/: captcha.rs  chain.rs  error.rs  lib.rs  reputation.rs  signing.rs  types.rs
docs/: ESRP-DEVELOPMENT-PLAN.md  ESRP-QUICK-REFERENCE.md  ESRP-SPEC.md
docs/extensions/: ISNAD.md
docs/tickets/: 000-index.md  001-create-cargo-workspace.md  002-initialize-git-repository.md  1001-create-event-logger.md  1002-integrate-with-services.md  1003-create-trace-viewer.md  101-create-esrp-core-crate.md  102-implement-core-types.md  103-implement-version-validation.md  104-implement-input-validation.md  105-write-core-unit-tests.md  201-create-esrp-canonical-crate.md  202-implement-canonical-json.md  203-implement-hashing.md  204-implement-payload-hash.md  205-document-number-handling.md  206-write-canonical-tests.md  301-create-esrp-workspace-crate.md  302-implement-uri-parser.md  303-define-workspace-provider-trait.md  304-implement-filesystem-workspace.md  305-write-workspace-tests.md  401-create-fixture-structure.md  402-create-request-fixtures.md  403-generate-canonical-fixtures.md  404-create-response-fixtures.md  405-document-fixture-format.md  501-create-conformance-test-suite.md  502-add-ci-pipeline.md  601-create-esrp-http-crate.md  602-implement-axum-extractors.md  603-implement-response-helpers.md  604-implement-reqwest-client.md  605-write-http-integration-tests.md  701-create-esrp-cli-crate.md  702-implement-cli-subcommands.md  703-write-cli-tests.md  801-create-pyo3-bindings.md  802-create-pydantic-models.md  803-create-python-client.md  (+7 more)
examples/esrp-server/: Cargo.toml  README.md
examples/esrp-server/src/: handlers.rs  legacy_bridge.rs  main.rs
fixtures/v1/: README.md
fixtures/v1/canonical/: async_video.json  async_video.sha256  batch_translation.json  batch_translation.sha256  image_generation.json  image_generation.sha256  simple_tts.json  simple_tts.sha256
fixtures/v1/requests/: async_video.json  batch_translation.json  image_generation.json  simple_tts.json
fixtures/v1/responses/: async_video_accepted.json  async_video_completed.json  simple_tts_error.json  simple_tts_success.json  timeout_error.json  translation_success.json  validation_error.json
tools/esrp-cli/: Cargo.toml
tools/esrp-cli/src/: main.rs
tools/esrp-cli/tests/: cli_test.rs
tools/generate-fixtures/: Cargo.toml
tools/generate-fixtures/src/: main.rs
tools/isnad-cli/: Cargo.toml
tools/isnad-cli/src/: main.rs
