[package]
name = "esrp-py"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Python bindings for the Erasmus Service Request Protocol"

[lib]
name = "esrp_py"
crate-type = ["cdylib"]

[dependencies]
esrp-core = { path = "../../crates/esrp-core" }
esrp-canonical = { path = "../../crates/esrp-canonical" }
esrp-workspace = { path = "../../crates/esrp-workspace" }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
