[package]
name = "esrp-http"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP transport layer for the Erasmus Service Request Protocol"
keywords = ["esrp", "http", "axum", "reqwest"]
categories = ["network-programming", "web-programming"]

[dependencies]
esrp-core = { path = "../esrp-core" }
esrp-canonical = { path = "../esrp-canonical" }
axum = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
uuid = { workspace = true }
chrono = { workspace = true }
