[package]
name = "esrp-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Workspace URI handling and artifact storage for ESRP"
keywords = ["esrp", "workspace", "storage", "artifacts"]
categories = ["filesystem", "encoding"]

[dependencies]
thiserror = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
