[package]
name = "isnad"
version = "0.1.0"
edition = "2021"
description = "Agent-to-agent attestation protocol - chain of trust for the agent ecosystem"
license = "MIT"
keywords = ["trust", "attestation", "agents", "provenance", "security"]
readme = "../../docs/extensions/ISNAD.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"

[dev-dependencies]
