[package]
name = "esrp-server"
version = "0.1.0"
edition = "2021"
description = "Example ESRP server for local testing"

[[bin]]
name = "esrp-server"
path = "src/main.rs"

[dependencies]
esrp-core = { path = "../../crates/esrp-core" }
esrp-http = { path = "../../crates/esrp-http" }
esrp-canonical = { path = "../../crates/esrp-canonical" }

axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
base64 = "0.22"
