[package]
name = "esrp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tool for the Erasmus Service Request Protocol"

[[bin]]
name = "esrp"
path = "src/main.rs"

[dependencies]
esrp-core = { path = "../../crates/esrp-core" }
esrp-canonical = { path = "../../crates/esrp-canonical" }
esrp-workspace = { path = "../../crates/esrp-workspace" }
clap = { version = "4.0", features = ["derive"] }
serde_json = { workspace = true }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
serde_json = { workspace = true }
