[package]
name = "generate-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generate canonical fixtures for ESRP conformance testing"
publish = false

[dependencies]
esrp-core = { path = "../../crates/esrp-core" }
esrp-canonical = { path = "../../crates/esrp-canonical" }
serde_json = { workspace = true }
